--- a/seguimiento.html
+++ b/seguimiento.html
@@ -6,54 +6,41 @@
     <title>Seguimiento en Tiempo Real</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
     <style>
         #map {
             height: 100vh;
             width: 100%;
         }
-        .alert-custom {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1051;
-            display: none;
-        }
     </style>
 </head>
 <body>
-    <div class="container mt-4">
-        <h1>Seguimiento en Tiempo Real del Repartidor</h1>
-        <div id="map" style="height: 500px; width: 100%; margin-top: 20px;"></div>
-        <p id="distance-info" class="h5">Distancia al destino: <span id="distance-span">0</span> km</p>
+    <div id="map"></div>
+    <p id="distance-info" class="h5">Distancia al destino: <span id="distance-span">0</span> km</p>
 
-        <!-- Añadir un elemento de audio para la alerta sonora -->
-        <audio id="alert-sound" src="audio/arrancamos.mp3" preload="auto"></audio>
-        <audio id="near-alert-sound" src="audio/alerta-cerca.mp3" preload="auto"></audio>
-
-        <!-- Alertas de inicio y de proximidad -->
-        <div id="start-alert" class="alert alert-success alert-custom">Comenzando el recorrido...</div>
-        <div id="near-alert" class="alert alert-warning alert-custom">¡Prepárate! Estoy a pocos metros de tu dirección.</div>
-    </div>
+    <!-- Carga de librerías -->
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
+    <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
 
     <script>
+        // Obtener los parámetros de la URL
         var urlParams = new URLSearchParams(window.location.search);
         var lat = parseFloat(urlParams.get('lat'));
         var lon = parseFloat(urlParams.get('lon'));
         var destLat = parseFloat(urlParams.get('destLat'));
         var destLon = parseFloat(urlParams.get('destLon'));
-        var notifiedStart = false; 
-        var notifiedNear = false;  
+        var repartidorId = urlParams.get('id'); // ID del repartidor
 
-        if (!isNaN(lat) && !isNaN(lon) && !isNaN(destLat) && !isNaN(destLon)) {
+        // Validar las coordenadas
+        if (!isNaN(lat) && !isNaN(lon) && !isNaN(destLat) && !isNaN(destLon) && repartidorId) {
             var map = L.map('map').setView([lat, lon], 13);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 attribution: '&copy; OpenStreetMap contributors',
                 maxZoom: 19
             }).addTo(map);
 
-            var userMarker = L.marker([lat, lon]).addTo(map).bindPopup('Inicio').openPopup();
+            var userMarker = L.marker([lat, lon]).addTo(map).bindPopup('Repartidor').openPopup();
             var destinationMarker = L.marker([destLat, destLon]).addTo(map).bindPopup('Destino').openPopup();
 
             var routeControl = L.Routing.control({
@@ -61,13 +48,19 @@
                     L.latLng(lat, lon),
                     L.latLng(destLat, destLon)
                 ],
-                router: L.Routing.osrmv1({ language: 'es', profile: 'driving' }),
+                router: L.Routing.osrmv1({
+                    language: 'es',
+                    profile: 'driving'
+                }),
                 routeWhileDragging: true,
-                addWaypoints: false
+                addWaypoints: false,
+                createMarker: function(i, waypoint, n) {
+                    return L.marker(waypoint.latLng).bindPopup(i === 0 ? 'Repartidor' : 'Destino').openPopup();
+                }
             }).addTo(map);
 
-            var eventSource = new EventSource('send_location.php');
-
+            // Establecer la conexión con SSE
+            var eventSource = new EventSource('sse.php?id=' + repartidorId);
             eventSource.onmessage = function(event) {
                 var data = JSON.parse(event.data);
                 if (data.lat && data.lon) {
@@ -84,41 +77,12 @@
                 }
             };
 
-            eventSource.onerror = function(event) {
-                console.error("Error al recibir la ubicación:", event);
-            };
-
             function updateDistance(newLat, newLon) {
                 var totalDistance = turf.distance(turf.point([newLon, newLat]), turf.point([destLon, destLat]), { units: 'kilometers' });
                 document.getElementById('distance-span').innerText = totalDistance.toFixed(2);
-
-                if (totalDistance <= 0.4 && !notifiedNear) {
-                    notifiedNear = true;
-                    showNearAlert();
-                }
-            }
-
-            function showStartAlert() {
-                var alertDiv = document.getElementById('start-alert');
-                alertDiv.style.display = 'block';
-                setTimeout(function() {
-                    alertDiv.style.display = 'none';
-                }, 3000);
-                var audio = document.getElementById('alert-sound');
-                audio.play();
-            }
-
-            function showNearAlert() {
-                var alertDiv = document.getElementById('near-alert');
-                alertDiv.style.display = 'block';
-                setTimeout(function() {
-                    alertDiv.style.display = 'none';
-                }, 5000);
-                var audio = document.getElementById('near-alert-sound');
-                audio.play();
             }
         } else {
-            alert('Las coordenadas o el ID del repartidor no son válidos.');
+            alert('Las coordenadas o el ID del repartidor no son válidos. Por favor, verifica el enlace de seguimiento.');
         }
     </script>
 </body>
